ipc/ipdl/test/ipdl/error/trans_WrongName4.ipdl
intr protocol trans_WrongName4 {

child:
    intr Msg();
    async __delete__();

state S1:
    send Msg goto S1;
    send __delete__
};
